@@ -16,6 +16,7 @@ ESSR0067="Table<{0}> not found"
 ESSR0068="Column<{1}> of Table<{0}>not found"
 ESSR0071="SQLException occured, because {0}"
 ESSR0311="No transaction"
+ESSR0317="Already associated with another transaction"
 ESSR0365="{0} is not a Throwable"
 
 WDAO0001="Argument({0}) not found"
