@@ -46,12 +46,10 @@
     
     <!--
     <component name="requiredTx" class="S2Dao_RequiredInterceptor" />
-    -->
-    <!--
     <component name="requiresNewTx" class="S2Dao_RequiresNewInterceptor" />
-    -->
-    <!--
     <component name="mandatoryTx" class="S2Dao_MandatoryInterceptor" />
+    <component name="notSupportedTx" class="S2Dao_NotSupportedInterceptor" />
     -->
+    
 
 </components>
